refactor infinite scroll

--- a/javascript/intersection-observer/index.html
+++ b/javascript/intersection-observer/index.html
@@ -18,6 +18,10 @@
             width: 100px;
             background-color: lightcoral;
         }
+
+        footer {
+            height: 50px
+        }
     </style>
 </head>
 
@@ -38,15 +42,16 @@
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
-        <div id="trigger" class="box"></div>
+        <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
     </main>
+    <footer id="trigger"></footer>
 
-    <script src="script.js"></script>
+    <script src="script.mjs" type="module"></script>
 
 </body>
 
