change instructions of editor

--- a/javascript/mutation-observer/index.html
+++ b/javascript/mutation-observer/index.html
@@ -17,9 +17,9 @@
     <main>
         <h1>This is a text editor</h1>
         <ul>
-            <li>/h1 - to create a h1 headline</li>
-            <li>/h2 - to create a h2 headline</li>
-            <li>/h3- to create a pargraph</li>
+            <li>/h1 - to create h1 headline</li>
+            <li>/h2 - to create h2 headline</li>
+            <li>/h3- to create h3 headline</li>
         </ul>
         <section id="editor" contenteditable>
             <div>Write here</div>
