--- a/javascript/playground/pokedex/index.html
+++ b/javascript/playground/pokedex/index.html
@@ -22,6 +22,13 @@
             margin: 0.2rem;
             text-align: center;
         }
+
+        .failed {
+            width: 100%;
+            background-color: lightgoldenrodyellow;
+            height: 200px;
+            text-align: center;
+        }
     </style>
 </head>
 
